Поправил авторизацию и реализовал регистрацию

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -9,4 +9,5 @@
         </div>
     </div>
     <br>
+    <p>{{ 'Нет аккаунта?' }} <a href="{{ url_for('auth.register') }}">{{ 'Зарегистрироваться' }}</a></p>
 {% endblock %}
