--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,13 +8,13 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <ul class="nav navbar-nav navbar-right">
-                    {% if current_user.is_authenticated %}
-                    <li><a href="{{ url_for('auth.logout') }}">{{ 'Logout' }}</a></li>
-                    {% endif %}
-                </ul>
             </div>
-        </div>
+            <ul class="nav navbar-nav navbar-right">
+                {% if current_user.is_authenticated %}
+                <li><a class="navbar-brand" href="{{ url_for('auth.logout') }}">Выход</a></li>
+                {% endif %}
+            </ul>
+            </div>
     </nav>
 {% endblock %}
 
