--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <h1> Hi, {{ current_user.username }}</h1>
+    <h1> Привет, {{ current_user.username }}</h1>
     <br>
 {% endblock %}
