Добавил базовую страницу профиля

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,14 +14,14 @@
             </div>
             <div class="nav navbar-nav navbar-right">
                 <div class="btn-group">
-                    <a class="btn btn-success navbar-btn" href="{{ url_for('main.index') }}">
+                    <a class="btn btn-success navbar-btn" href="{{ url_for('profile.profile') }}">
                     <i class="glyphglyphicon glyphicon-user glyphicon"></i>
                     </a>
                     <div class="btn-group pull-right ml-20">
                         <a class="btn dropdown-toggle btn-success navbar-btn" data-toggle="dropdown"> <span class="caret"></span></a>
                         <ul class="dropdown-menu">
 
-                            <li><a href="{{ url_for('main.index') }}">
+                            <li><a href="{{ url_for('profile.profile') }}">
                             <i class="glyphglyphicon glyphicon-user glyphicon"></i>
                                 Профиль
                             </a></li>
