--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,11 @@
 {% extends 'bootstrap/base.html' %}
 
+{% block styles %}
+    {{super()}}
+     <link rel="stylesheet"
+     href="{{url_for('static', filename='base.css')}}">
+{% endblock %}
+
 {% block title %}
     {% if title %}{{ title }} {% else %}{{ 'Стандартный заголовок' }}{% endif %}
 {% endblock %}
