--- a/app/templates/coursecreate/create.html
+++ b/app/templates/coursecreate/create.html
@@ -1,6 +1,20 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1> Создание курса, {{ current_user.username }}</h1>
-    <br>
+    <h1> Создание курса </h1>
+    <hr align="left" width="600" class="hr" />
+
+    <form action="" method="post">
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.name.label }}<br>
+            {{ form.name(size=32) }}<br>
+            {% for error in form.name.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+
+        <p>{{ form.submit() }}</p>
+    </form>
 {% endblock %}
