--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -3,4 +3,31 @@
 {% block app_content %}
     <h1> Привет, {{ current_user.username }}</h1>
     <br>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered">
+                    <tr>
+                    <th>Lms ID</th>
+                    <th>Название курса</th>
+                    <th>Действия</th>
+                    </tr>
+
+                    {% for course in current_user.courses %}
+                    <tr>
+                        <td>
+                        Заглушка
+                        </td>
+                        <td>
+                        course.name
+                        </td>
+                        <td>
+                        Заглушка
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </table>
+            </div>
+        </div>
+    </div>
 {% endblock %}
