--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -31,20 +31,27 @@
         </div>
     </div>
     <nav aria-label="Page navigation example">
-        <ul class="pagination">
-            <li class="page-item">
+        <ul class="d-flex pagination justify-content-center">
+
             {% if prev_url %}
-                <a class="page-link" href="{{ prev_url }}">Предыдущая</a>
+                <li class="page-item">
+                <a class="page-link page-item" href="{{ prev_url }}">Предыдущая</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                <a aria-disabled="true" class="page-link page-item" href="#">Предыдущая</a>
+                </li>
             {% endif %}
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
+
             {% if next_url %}
-                <a class="page-link" href="{{ next_url }}">Следующая</a>
+                <li class="page-item">
+                <a class="page-link page-item" href="{{ next_url }}">Следующая</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                <a aria-disabled="true" class="page-link page-item" href="#">Следующая</a>
+                </li>
             {% endif %}
-            </li>
         </ul>
     </nav>
 {% endblock %}
