--- a/app/templates/profile/edit.html
+++ b/app/templates/profile/edit.html
@@ -5,27 +5,33 @@
     <h1> Изменение информации о профиле </h1>
     <hr align="left" width="600" class="hr" />
 
-    <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.email.label }}<br>
-            {{ form.email(size=32) }}<br>
-            {% for error in form.email.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.name.label }}<br>
-            {{ form.name(size=32) }}<br>
-        </p>
+    <div class="row">
+        <div class="col-md-6">
+            <form action="" method="post" class="form">
+                <div class="form-group">
+                    {{ form.hidden_tag() }}
+                    <p>
+                        {{ form.username.label(class_="control-label") }}<br>
+                        {{ form.username(class_="form-control")}}<br>
+                        {% for error in form.username.errors %}
+                            <span style="color: red;">[{{ error }}]</span>
+                        {% endfor %}
+                    </p>
+                    <p>
+                        {{ form.email.label(class_="control-label") }}<br>
+                        {{ form.email(class_="form-control") }}<br>
+                        {% for error in form.email.errors %}
+                            <span style="color: red;">[{{ error }}]</span>
+                        {% endfor %}
+                    </p>
+                    <p>
+                        {{ form.name.label(class_="control-label") }}<br>
+                        {{ form.name(class_="form-control") }}<br>
+                    </p>
+                </div>
 
-        <p>{{ form.submit() }}</p>
-    </form>
+                <p> {{ form.submit() }}</p>
+            </form>
+        </div>
+    </div>
 {% endblock %}
