Добавил кнопки модификации и удаления в таблицу

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -22,7 +22,12 @@
                         {{course.name}}
                         </td>
                         <td>
-                        Заглушка
+                            <a title="Edit" class="btn btn-primary" href="#">
+                                <i class="glyphicon glyphicon-edit"></i>
+                            </a>
+                            <a href="#" class="btn btn-danger index-delete">
+                                    <i class="glyphicon glyphicon-trash"></i>
+                            </a>
                         </td>
                     </tr>
                     {% endfor %}
