Удаление курса базовое

--- a/app/templates/coursecreate/editcreate.html
+++ b/app/templates/coursecreate/editcreate.html
@@ -2,7 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1> Создание курса </h1>
+    <h1> {{ title }} </h1>
     <hr align="left" width="600" class="hr" />
 
     <div class="row">
