--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -25,9 +25,33 @@
                             <a title="Edit" class="btn btn-primary" href="{{ url_for('coursecreate.edit', course_id=course.id) }}">
                                 <i class="glyphicon glyphicon-edit"></i>
                             </a>
-                            <a href="#" class="btn btn-danger index-delete">
-                                    <i class="glyphicon glyphicon-trash"></i>
-                            </a>
+                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModalCenter{{course.id}}">
+                                <i class="glyphicon glyphicon-trash"></i>
+                            </button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModalCenter{{course.id}}">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLongTitle{{course.id}}">Deleting Post Permanently</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <h3>{{course.name}}??</h3>
+                                            <p>Are you sure?</p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                            <form action="{{url_for('coursecreate.delete')}}" method="post">
+                                                <input type="hidden" name="course_id" value="{{ course.id }}">
+                                                <input type="submit" value="Delete" class="btn btn-danger">
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </td>
                     </tr>
                     {% endfor %}
