--- a/app/templates/profile/edit.html
+++ b/app/templates/profile/edit.html
@@ -28,6 +28,14 @@
                         {{ form.name.label(class_="control-label") }}<br>
                         {{ form.name(class_="form-control") }}<br>
                     </p>
+                    <p>
+                        {{ form.telegram_id.label(class_="control-label") }}<br>
+                        {{ form.telegram_id(class_="form-control") }}<br>
+                    </p>
+                    <p>
+                        {{ form.lms_id.label(class_="control-label") }}<br>
+                        {{ form.lms_id(class_="form-control") }}<br>
+                    </p>
                 </div>
 
                 <p> {{ form.submit() }}</p>
