--- a/app/templates/profile/edit.html
+++ b/app/templates/profile/edit.html
@@ -10,32 +10,11 @@
             <form action="" method="post" class="form">
                 <div class="form-group">
                     {{ form.hidden_tag() }}
-                    <p>
-                        {{ form.username.label(class_="control-label") }}<br>
-                        {{ form.username(class_="form-control")}}<br>
-                        {% for error in form.username.errors %}
-                            <span style="color: red;">[{{ error }}]</span>
-                        {% endfor %}
-                    </p>
-                    <p>
-                        {{ form.email.label(class_="control-label") }}<br>
-                        {{ form.email(class_="form-control") }}<br>
-                        {% for error in form.email.errors %}
-                            <span style="color: red;">[{{ error }}]</span>
-                        {% endfor %}
-                    </p>
-                    <p>
-                        {{ form.name.label(class_="control-label") }}<br>
-                        {{ form.name(class_="form-control") }}<br>
-                    </p>
-                    <p>
-                        {{ form.telegram_id.label(class_="control-label") }}<br>
-                        {{ form.telegram_id(class_="form-control") }}<br>
-                    </p>
-                    <p>
-                        {{ form.lms_id.label(class_="control-label") }}<br>
-                        {{ form.lms_id(class_="form-control") }}<br>
-                    </p>
+                    {% with %} {% set  specificform = form.username %} {% include "helpers/field_form.html" %} {% endwith %}
+                    {% with %} {% set  specificform = form.email %} {% include "helpers/field_form.html" %} {% endwith %}
+                    {% with %} {% set  specificform = form.name %} {% include "helpers/field_form.html" %} {% endwith %}
+                    {% with %} {% set  specificform = form.telegram_id %} {% include "helpers/field_form.html" %} {% endwith %}
+                    {% with %} {% set  specificform = form.form.lms_id %} {% include "helpers/field_form.html" %} {% endwith %}
                 </div>
 
                 <p> {{ form.submit() }}</p>
