Придумал какой то костыль с повторной отправкой формы(

--- a/app/templates/coursecreate/editcreate.html
+++ b/app/templates/coursecreate/editcreate.html
@@ -63,4 +63,12 @@ $(document).ready(function() {
     });
 });
 </script>
+
+{% if from_post == True %}
+    <script type="text/javascript">
+        $(document).ready(function(){
+             $("#submit").click();
+        });
+    </script>
+{% endif %}
 {% endblock %}
