Revert "Исправил два бага"
This reverts commit 19f357778d3a13d2aa5ccda828a18cd8522d6a31.

--- a/app/templates/coursecreate/editcreate.html
+++ b/app/templates/coursecreate/editcreate.html
@@ -45,12 +45,12 @@ $(document).ready(function() {
         .attr("style", "left: 30px; position: relative")
 
         var newInputNumber = $("<input required type='text'></input>")
-            .attr("name", "blocks-" + num + "-blocks_number")
+            .attr("name", "blocks-" + num + "blocks_number")
             .attr("class", "form-control input_in_one_string")
             .attr("value", num)
 
         var newInputLmsId = $("<input required type='text' value=''></input>")
-            .attr("name", "blocks-" + num + "-blocks_required_task_lms_id")
+            .attr("name", "blocks-" + num + "blocks_required_task_lms_id")
             .attr("class", "form-control input_in_one_string")
 
         $("#blocks").append(labelInputNumber);
