--- a/app/templates/coursecreate/editcreate.html
+++ b/app/templates/coursecreate/editcreate.html
@@ -14,8 +14,9 @@
                     {% with %} {% set  specificform = form.name %} {% include "helpers/field_form.html" %} {% endwith %}
                     {% with %} {% set  specificform = form.trainer_telegram_id %} {% include "helpers/field_form.html" %} {% endwith %}
                     {% with %} {% set  specificform = form.trainer_lms_id %} {% include "helpers/field_form.html" %} {% endwith %}
+                    {% with %} {% set  specificform_boolean = form.is_more_then_one_block %} {% set  specificform_hidden = form.number_of_blocks %} {% include "helpers/boolean_and_hidden_field.html" %} {% endwith %}
                 </div>
-                <label> Курс разделяется на блоки? </label>
+
                 <p class="control-label">{{ form.submit() }}</p>
 
             </form>
