--- a/app/templates/helpers/boolean_and_hidden_field.html
+++ b/app/templates/helpers/boolean_and_hidden_field.html
@@ -1,14 +1,15 @@
 {% block boolean_and_hidden_form %}
      <p>
         {{ specificform_boolean.label(class_="control-label") }}
-        {{ specificform_boolean }}<br>
+        {{ specificform_boolean}}<br>
     </p>
 
-    <p>
-        {{ specificform_hidden.label(class_="control-label", style="display: none;") }}<br>
-        {{ specificform_hidden(class_="form-control", style="display: none;") }}<br>
+    <p id="{{ specificform_hidden.id }}_p" style="display: none;">
+        {{ specificform_hidden.label(class_="control-label") }}<br>
+        {{ specificform_hidden(class_="form-control") }}<br>
         {% for error in specificform_hidden.errors %}
             <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
     </p>
 {% endblock %}
+
