--- a/app/templates/coursecreate/editcreate.html
+++ b/app/templates/coursecreate/editcreate.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
+{% block scripts %}
+    {{super()}}
+     <script type="text/javascript" src="{{ url_for('static', filename = 'createedit.js') }}"></script>
+{% endblock %}
+
 {% block app_content %}
     <h1> {{ title }} </h1>
     <hr align="left" width="600" class="hr" />
