--- a/app/templates/students/index.html
+++ b/app/templates/students/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <h1> Список студентов курса {{ course_name }}</h1>
+    <h1> Список студентов курса <b>{{ course_name }}</b></h1>
     <br>
     <div class="panel panel-default">
         <div class="panel-body">
