--- a/app/templates/students/index.html
+++ b/app/templates/students/index.html
@@ -3,6 +3,7 @@
 {% block app_content %}
     <h1> Список студентов курса <b>{{ course_name }}</b></h1>
     <br>
+    <a class="btn btn-success navbar-btn" href="{{ url_for('students.add', course_id=course_id) }}">Добавить студента</a>
     <div class="panel panel-default">
         <div class="panel-body">
             <div class="table-responsive">
