--- a/web/app/templates/students/index.html
+++ b/web/app/templates/students/index.html
@@ -45,6 +45,7 @@
                                             <div class="menubutton">
                                             <form action="{{url_for('students.delete')}}" method="post">
                                                 <input type="hidden" name="student_id" value="{{ student.id }}">
+                                                <input type="hidden" name="course_id" value="{{ course_id }}">
                                                 <input type="submit" value="Удалить" class="btn btn-danger button_in_modal" height="100px">
                                             </form>
                                             </div>
